[chore] Fix visibility issue

--- a/style.css
+++ b/style.css
@@ -290,6 +290,7 @@ img {
   width: 100%;
   height: 100%;
   opacity: 0;
+  visibility: hidden;
 
   position: absolute;
   top: 0;
